                    *************************
                    ** afex VERSION 0.11-x **
                    *************************
                    
                    Changes in afex Version 0.11-x
                    Released XXX 2014

    Significant User Visible Changes and New Features

    o   print, summary, and anova method for mixed objects are now 
        identical.
        
    o   description of returned object from mixed() extended (Thanks
        to Ben Bolker, see http://stackoverflow.com/a/25612960/289572)
        
    Bugfixes
    
    o   
        
                    ************************
                    ** afex VERSION 0.10-x **
                    ************************
                    
                    Changes in afex Version 0.10-x
                    Released August 2014

    Significant User Visible Changes and New Features

    o   afex does not change the global contrasts anymore when loading 
        the package (due to popular demand).
    
    o   new functions to globally set contrasts: set_sum_contrasts & 
        set_treatment_contrasts (and some more wrappers).
        
    o   Added more mixed model examples from Maxwell & Delaney, Chapter 
        15 ("Multilevel Models for within subjects designs"), see ?mixed 
        and ?md_15.1. Thanks to Ulf Mertens. 
        
    Bugfixes
    
    o   removed bug when factor levels of within-subject factors
        contained "+" or "-" and were not converted correctly. Added 
        tests for known bugs in aov.car.
        

                    ************************
                    ** afex VERSION 0.9-x **
                    ************************
                    
                    Changes in afex Version 0.9-x
                    Released April 2014

    Significant User Visible Changes and New Features

    o   added function aov4: another wrapper of car::Anova for ANOVA
        models specified via lme4::lmer syntax.
    